main-container add el-scrollbar, other: fix some style

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -2,10 +2,26 @@
 
   // 主体区域 Main container
   .main-container {
-    min-height: 100%;
+    height: 100%;
     transition: margin-left .28s;
     margin-left: $sideBarWidth;
     position: relative;
+    overflow: hidden;
+    .scrollbar-wrapper {
+      overflow-x: hidden !important;
+      .el-scrollbar__view {
+        height: 100%;
+      }
+    }
+    .el-scrollbar__bar.is-vertical {
+      // right: 0px;
+    }
+    .el-scrollbar {
+      height: 100%;
+    }
+    .is-horizontal {
+      display: none;
+    }
   }
 
   // 侧边栏 Sidebar container
